<resources>
    <string name="app_name">SNUDAY</string>

    <!-- Splash Activity -->
    <string name="splash_no_internet_connection">인터넷을 연결하셔야 이용이 가능합니다.</string>

    <!-- Login Activity -->
    <string name="login_id_hint">아이디</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="login_sign_up"><u>회원가입</u></string>
    <string name="login_find_id"><u>아이디 / 비밀번호 찾기</u></string>

    <!-- SignUp Activity -->
    <string name="sign_up_app_bar">회원가입</string>
    <string name="sign_up_greeting">스누데이에 오신 것을 환영합니다.</string>
    <string name="sign_up_exclamation_mark">!</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_id_guide">5자 이상의 영문 소문자, 숫자만 사용 가능합니다.</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_password_guide">8자 이상의 영문, 숫자를 사용하세요.</string>
    <string name="sign_up_password_check">비밀번호 확인</string>
    <string name="sign_up_password_check_wrong">입력한 정보가 올바르지 않습니다.</string>
    <string name="sign_up_name">성, 이름</string>
    <string name="sign_up_name_guide">필수정보입니다.</string>
    <string name="sign_up_last_name">성</string>
    <string name="sign_up_first_name">이름</string>
    <string name="sign_up_email">이메일 주소</string>
    <string name="sign_up_email_guide">구성원 인증에 사용되는 필수정보입니다.</string>
    <string name="sign_up_email_postfix">\@snu.ac.kr</string>
    <string name="sign_up_email_verification">인증번호</string>
    <string name="sign_up_email_verification_send">인증</string>
    <string name="sign_up_email_verification_resend"><u>재발송</u></string>
    <string name="sign_up_email_verification_wrong">인증번호가 올바르지 않습니다.</string>
    <string name="sign_up_email_verification_check">확인</string>
    <string name="sign_up_email_verification_remain_time">유효시간 </string>
    <string name="sign_up_email_verification_remain_time_reset"><u>시간연장</u></string>
    <string name="sign_up_email_verification_remain_time_minute">분</string>
    <string name="sign_up_email_verification_remain_time_second">초</string>
    <string name="sign_up_agree"><u>스누데이 이용약관, 개인정보 수집 및 이용에 모두 동의합니다.</u></string>
    <string name="sign_up_agree_access_terms">스누데이 이용약관 동의</string>
    <string name="sign_up_agree_privacy_policy">개인정보 수집 및 이용 동의</string>
    <string name="sign_up_require"> (필수)</string>
    <string name="sign_up_button">회원가입</string>

    <!-- Root Fragment -->
    <string name="root_schedule">내 일정</string>
    <string name="root_notification">공지사항</string>
    <string name="root_search">검색</string>
    <string name="root_channel">채널</string>
    <string name="root_mypage">My Page</string>

    <!-- Schedule Fragment -->
    <string name="schedule_filter_setting">필터 설정</string>
    <string name="schedule_today">오늘</string>
    <string name="schedule_dialog_my_event_create">내 일정 생성</string>
    <string name="schedule_dialog_my_event_modify">내 일정 수정</string>
    <string name="schedule_dialog_title">제목</string>
    <string name="schedule_dialog_start_date">시작일</string>
    <string name="schedule_dialog_due_date">종료일</string>
    <string name="schedule_dialog_all_day">하루종일</string>
    <string name="schedule_dialog_memo">메모</string>
    <string name="schedule_dialog_save">저장하기</string>
    <string name="schedule_dialog_delete">삭제하기</string>
    <string name="schedule_dialog_filter_color">필터 색상 설정</string>

    <!-- Notification Fragment -->
    <string name="notification_app_bar">공지</string>
    <string name="notification_search_filter_all">전체</string>
    <string name="notification_search_filter_title">제목</string>
    <string name="notification_search_filter_contents">내용</string>
    <string name="notification_filter_hint">키워드로 검색해보세요.</string>
    <string name="notification_subscribed_tag_text">구독한 태그 글</string>
    <string name="notification_filter_setting">필터 설정</string>

    <!-- Notice Detail Fragment -->
    <string name="notice_detail_app_bar">공지 상세보기</string>

    <!-- Search Fragment -->
    <string name="search_app_bar">채널 검색</string>
    <string name="search_search_filter_all">전체</string>
    <string name="search_search_filter_channel_name">채널명</string>
    <string name="search_search_filter_channel_des">채널 소개</string>
    <string name="search_filter_hint">채널명으로 검색해보세요.</string>
    <string name="search_recommend">이런 채널도 있어요!</string>
    <string name="search_channel_subscriber">구독자 </string>
    <string name="search_channel_subscriber_count">명</string>
    <string name="search_need_more_word">검색어를 두 글자 이상 입력해주세요.</string>
    <string name="search_no_result">검색 결과가 없습니다.</string>

    <!-- Channel Fragment -->
    <string name="channel_app_bar">채널 페이지</string>
    <string name="channel_subscribing_channel">구독 채널</string>
    <string name="channel_managing_channel">내 채널</string>
    <string name="channel_channel_subscriber">구독자</string>
    <string name="channel_channel_subscriber_count">명</string>
    <string name="channel_subscribe">구독</string>

    <string name="channel_create">채널 생성</string>
    <string name="channel_modify">채널 수정</string>
    <string name="channel_public_channel">공개 채널</string>
    <string name="channel_private_channel">비공개 채널</string>
    <string name="channel_channel_name">채널명</string>
    <string name="channel_channel_description">채널 소개</string>
    <string name="channel_manager_maintain">매니저 관리</string>
    <string name="channel_manager_search">매니저로 추가할 멤버 검색</string>
    <string name="channel_manager_add">추가</string>
    <string name="channel_save">저장하기</string>
    <string name="channel_delete">삭제하기</string>

    <string name="channel_create_notice">공지 생성</string>
    <string name="channel_notice_title">제목</string>
    <string name="channel_notice_description">내용</string>

    <!-- Channel Detail Fragment -->
    <string name="channel_detail_notice">공지사항</string>
    <string name="channel_detail_more">더보기</string>
    <string name="channel_detail_schedule">채널 일정</string>

    <!-- Awaiter Fragment -->
    <string name="awaiter_app_bar">구독 요청</string>
    <string name="awaiter_accept">수락</string>
    <string name="awaiter_reject">거절</string>

    <!-- My Page Fragment -->
    <string name="my_page_app_bar">My Page</string>
    <string name="my_page_account">계정</string>
    <string name="my_page_username_notation">(user id)</string>
    <string name="my_page_id_change">아이디 변경</string>
    <string name="my_page_password_change">비밀번호 변경</string>
    <string name="my_page_service_info">서비스 정보</string>
    <string name="my_page_version_info">버전 정보</string>
    <string name="my_page_access_term">서비스 이용약관</string>
    <string name="my_page_privacy_policy">개인정보 처리방침</string>
    

    <!-- Custom Calendar View -->
    <string name="custom_calendar_sunday">일</string>
    <string name="custom_calendar_monday">월</string>
    <string name="custom_calendar_tuesday">화</string>
    <string name="custom_calendar_wednesday">수</string>
    <string name="custom_calendar_thursday">목</string>
    <string name="custom_calendar_friday">금</string>
    <string name="custom_calendar_saturday">토</string>

    <!-- Color Name -->
    <string name="color_name_snutt_1">석류</string>
    <string name="color_name_snutt_2">감귤</string>
    <string name="color_name_snutt_3">들국</string>
    <string name="color_name_snutt_4">완두</string>
    <string name="color_name_snutt_5">비취</string>
    <string name="color_name_snutt_6">지중해</string>
    <string name="color_name_snutt_7">하늘</string>
    <string name="color_name_snutt_8">라벤더</string>
    <string name="color_name_snutt_9">자수정</string>

</resources>