<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabIndicatorHeight="0dp"
        app:tabPaddingTop="8dp"
        app:tabSelectedTextColor="@color/snuday_blue"
        app:tabIconTint="@color/color_tabitem_selector"
        app:tabIndicatorColor="@color/black"
        app:tabGravity="fill"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tabitem_schedule"
            android:text="@string/root_schedule"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tabitem_notification"
            android:text="@string/root_notification"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tabitem_search"
            android:text="@string/root_search"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tabitem_channel"
            android:text="@string/root_channel"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tabitem_schedule"
            android:text="@string/root_mypage"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tab_layout"
        />



</androidx.constraintlayout.widget.ConstraintLayout>