<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/login_logo"
        android:layout_marginTop="70dp"
        />
    
    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="320dp"
        android:layout_height="43dp"
        android:background="@drawable/login_edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:textSize="15dp"
        android:hint="@string/login_id_hint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="320dp"
        android:layout_height="43dp"
        android:background="@drawable/login_edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/edit_text_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <TextView
        android:id="@+id/button_login"
        android:layout_width="320dp"
        android:layout_height="43dp"
        android:background="@drawable/login_button"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_button"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_find_id"
            android:textColor="@color/login_text"
            android:textSize="15dp"
            />

        <View
            android:layout_width="56dp"
            android:layout_height="0dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up"
            android:textColor="@color/login_text"
            android:textSize="15dp"
            />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>