<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/app_bar_channel_notice"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_back_button"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_create_notice"
            android:textSize="21dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

        <View
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <View
        android:id="@+id/div_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_channel_notice"
        android:background="@color/calendar_div_line_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/div_line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/frame_edit_text"
            android:fontFamily="@font/sf_pro_regular"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/snuday_hint_text_gray"
            android:hint="@string/channel_notice_title"
            android:paddingHorizontal="17dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/frame_edit_text"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textColorHint="@color/snuday_hint_text_gray"
            android:hint="@string/channel_notice_description"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp" />

        <TextView
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/frame_button_thick"
            android:layout_marginHorizontal="80dp"
            android:textSize="18dp"
            android:fontFamily="@font/sf_pro_font_family"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/channel_save"
            android:layout_marginVertical="45dp"
            android:gravity="center" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>