<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background">

    <LinearLayout
        android:id="@+id/app_bar_search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_app_bar"
            android:textSize="21dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:id="@+id/div_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_search"
        android:background="@color/div_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@drawable/search_filter_button"
        app:layout_constraintTop_toBottomOf="@id/app_bar_search"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/search_filter"
            android:layout_width="72dp"
            android:layout_height="39dp"
            android:gravity="center"
            android:background="@drawable/search_filter_button"
            app:layout_constraintBottom_toBottomOf="@id/search_bar"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_search_filter_all"
                android:textSize="15dp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filter_triangle"
                android:layout_marginStart="7dp"
                android:contentDescription="filter button" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_search_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/notification_filter_hint"
            android:textColorHint="@color/notification_hint_gray"
            android:textSize="15dp"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification_search"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_recommend_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/search_bar"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:layout_marginTop="24dp"
        android:text="@string/search_recommend"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_channels"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_recommend_advice"
        app:layout_goneMarginTop="21dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_search"
        />





</androidx.constraintlayout.widget.ConstraintLayout>