<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snuday_background_gray">

    <LinearLayout
        android:id="@+id/app_bar_notification"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_app_bar"
            android:textSize="21dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:id="@+id/div_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_notification"
        android:background="@color/calendar_div_line_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_channel_list_selector"
        app:layout_constraintTop_toBottomOf="@id/div_line"
        android:layout_marginTop="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/button_subscribing_channel_list"
            android:layout_width="100dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/frame_channel_list_menu"
            android:gravity="center"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/channel_subscribing_channel"
            android:textColor="@color/color_channel_list_selector"/>

        <TextView
            android:id="@+id/button_managing_channel_list"
            android:layout_width="100dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toEndOf="@id/button_subscribing_channel_list"
            app:layout_constraintTop_toTopOf="@id/button_subscribing_channel_list"
            app:layout_constraintBottom_toBottomOf="@id/button_subscribing_channel_list"
            android:background="@drawable/frame_channel_list_menu"
            android:gravity="center"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/channel_managing_channel"
            android:textColor="@color/color_channel_list_selector"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:background="@color/snuday_blue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:id="@+id/line_show_channel_selecting"
            android:layout_width="98dp"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginStart="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_channel_list_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        tools:listitem="@layout/item_channel_page_channel"
        android:paddingTop="10dp"
        android:clipToPadding="false" />

</androidx.constraintlayout.widget.ConstraintLayout>